--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scheduled-reminder-vite",
-  "productName": "scheduled-reminder-vite",
+  "productName": "scheduled-reminder",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
