--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cron-parser": "^4.9.0",
     "electron-squirrel-startup": "^1.0.1",
     "node-cron": "^3.0.3"
   }
